# FirstCall

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  firstCall_ssh.pem  firstcall.db  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: agent.py  database.py  main.py  models.py  schemas.py  secrets.py  stt.py  triage.py  tts.py
app/protocols/: first_aid.yaml  loader.py
static/: style.css
tests/: conftest.py  test_agent.py  test_protocol.py  test_triage.py
